apps/binner/overlays/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: binner
  namespace: binner
spec:
  selector:
    app: binner
  ports:
    - name: main
      port: 8090
      targetPort: 8090
