apps/binner/overlays/prod/ingress-route-ext.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: binner-ingress-ext
  namespace: binner
spec:
  entryPoints:
    - websecure-ext
  routes:
    - match: Host(`binner.sobrinho.pt`)
      kind: Rule
      middlewares:
        - name: middleware-auth-forward
          namespace: traefik
      services:
        - name: binner
          port: main
          scheme: https
          serversTransport: traefik-transport-insecure@kubernetescrd
