apps/binner/overlays/prod/ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: binner-ingress
  namespace: binner
  annotations:
    external-dns.alpha.kubernetes.io/target: infra-int-old
spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`binner.sobrinho.pt`)
      kind: Rule
      services:
        - name: binner
          port: main
          scheme: https
          serversTransport: traefik-transport-insecure@kubernetescrd
  tls:
    secretName: binner-cert
